# nier

./: .gitignore  Cargo.toml
.github/workflows/: terraform.yml
charts/dashboard/: Chart.yaml  values.yaml
charts/dashboard/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
charts/inference/: Chart.yaml  values.yaml
charts/inference/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/ingest/: Chart.yaml  values.yaml
charts/ingest/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
charts/nier/: Chart.yaml  README.md  values.yaml
charts/nier/templates/: _helpers.tpl  kafka-topics.yaml  namespace.yaml
charts/pipeline/: Chart.yaml  values.yaml
charts/pipeline/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
charts/storage/: Chart.yaml  values.yaml
charts/storage/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
dashboard/: package-lock.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/alerts/: page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/live/: page.tsx
dashboard/src/components/: AlertList.tsx  DetectionOverlay.tsx  SafetyStats.tsx  VideoGrid.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/lib/: api.ts
infrastructure/: backend.tf.example  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/environments/dev/: terraform.tfvars
infrastructure/environments/prod/: terraform.tfvars
infrastructure/modules/ec2-gpu/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ec2-gpu/templates/: user_data.sh
infrastructure/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/modules/msk/: main.tf  outputs.tf  variables.tf
infrastructure/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vpc/: main.tf  outputs.tf  variables.tf
services/inference/: .dockerignore  Dockerfile  pyproject.toml
services/inference/proto/: inference.proto
services/inference/src/: __init__.py  config.py  inference_server.py  kafka_producer.py  main.py
services/inference/src/models/: __init__.py  base.py  ppe_detector.py
services/ingest/: Cargo.toml  README.md  build.rs
services/ingest/proto/: ingest.proto
services/ingest/src/: config.rs  frame_processor.rs  grpc_client.rs  main.rs  rtsp_client.rs
services/pipeline/: Cargo.toml  build.rs
services/pipeline/python/: __init__.py  config.py  consumer.py  example.py  producer.py  requirements.txt  schemas.py
services/pipeline/src/: config.rs  consumer.rs  lib.rs  main.rs  producer.rs
services/pipeline/src/schemas/: alert.proto  detection_event.proto  frame_metadata.proto
services/storage/: Cargo.toml
services/storage/config/: storage.example.toml
services/storage/migrations/: 20240115000001_create_frames_table.sql  20240115000002_create_detections_table.sql  20240115000003_create_storage_stats_views.sql
services/storage/src/: config.rs  frame_selector.rs  kafka_consumer.rs  lib.rs  main.rs  metadata_store.rs  presigned_urls.rs  s3_uploader.rs
