[package]
name = "nier-ingest"
version = "0.1.0"
edition = "2021"
authors = ["Nier Team"]
description = "RTSP ingest service for factory floor analytics with worker-worn camera glasses"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }

# GStreamer bindings for video processing
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"

# gRPC
tonic = "0.11"
prost = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
backoff = { version = "0.4", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "nier-ingest"
path = "src/main.rs"
