[package]
name = "storage-service"
version = "0.1.0"
edition = "2021"
description = "Selective frame storage service for Nier factory floor analytics platform"
authors = ["Nier Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# AWS SDK for S3
aws-sdk-s3 = "1.12"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-types = "1.1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP server for presigned URL API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Health checks
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"

[[bin]]
name = "storage-service"
path = "src/main.rs"
